Add Generator class